syntax = "proto3";

option java_package = "org.hse.moodactivities.common.proto.requests.defaults";
option java_multiple_files = true;

package defaults;

message ActivityRecord {
  string time = 1;
  string activity = 2;
  string report = 3;
}
