syntax = "proto3";

option java_package = "org.hse.moodactivities.common.proto.responses.stats";
option java_multiple_files = true;

package responses;

message FitnessData {
    int32 steps = 1;
    double score = 2;
    string date = 3;
}
